fix: about section on mobile

--- a/src/app/pages/home/about/about.component.scss
+++ b/src/app/pages/home/about/about.component.scss
@@ -3,6 +3,10 @@
   align-items: center;
   gap: min(6vw, 4rem);
 
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+
   @media screen and (max-width: 600px) {
     margin-left: -1rem;
     margin-right: -1rem;
@@ -13,6 +17,6 @@
     background: white;
     aspect-ratio: 1;
     object-fit: contain;
-    width: 33%;
+    width: min(33%, 300px);
   }
 }
